--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "react": "^17.0.1",
+    "lodash": "^4.17.21",
+    "nanoid": "^3.1.25",
+    "prop-types": "^15.7.2",
+    "react": "17.0.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.6.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-sortablejs": "^6.0.0",
+    "sortablejs": "^1.14.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9",
     "zustand": "^3.5.7"
